/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package com.utfpr.projetoanalisedesistemas;


public class Ticket {
    private final float basePrice = 30.00f;

    public Ticket() {
    }

    public float getBasePrice() {
        return basePrice;
    }
    
}
