@startuml SELF-RU
title SELF-RU

together {
    class com.utfpr.projetoanalisedesistemas.LoginScreen {
    - javax.swing.JToggleButton btn_login
    - javax.swing.JPasswordField f_password
    - javax.swing.JTextField f_ra
    - javax.swing.JLabel l_Home
    - javax.swing.JLabel l_aviso
    - javax.swing.JLabel l_logo
    - javax.swing.JLabel l_password
    - javax.swing.JLabel l_ra
    - javax.swing.JPanel loginScreen
    - javax.swing.JPanel p_auxPassword
    - javax.swing.JPanel p_auxRA
    - javax.swing.JPanel p_aviso
    - javax.swing.JPanel p_bntlogin
    - javax.swing.JPanel p_firstLog
    - javax.swing.JPanel p_home
    - javax.swing.JPanel p_password
    - javax.swing.JPanel p_ra
    - javax.swing.JPanel panelLogo
    + <<Create>> LoginScreen()
    - void initComponents()
    - void f_raActionPerformed(java.awt.event.ActionEvent)
    - void verificaLogin()
    - void f_passwordActionPerformed(java.awt.event.ActionEvent)
    - void btn_loginActionPerformed(java.awt.event.ActionEvent)
    }

    class com.utfpr.projetoanalisedesistemas.OptionScreen {
    - javax.swing.JButton btn_buyTqt
    - javax.swing.JButton btn_card
    - javax.swing.JButton btn_exit
    - javax.swing.JLabel l_logo1
    - javax.swing.JPanel optionScreen
    - javax.swing.JPanel p_nav
    - javax.swing.JPanel p_options
    + <<Create>> OptionScreen()
    - void initComponents()
    - void btn_cardActionPerformed(java.awt.event.ActionEvent)
    - void btn_exitActionPerformed(java.awt.event.ActionEvent)
    - void btn_buyTqtActionPerformed(java.awt.event.ActionEvent)
    }
    class com.utfpr.projetoanalisedesistemas.PurchaseScreen {
    - Ticket ticket
    - float total
    - javax.swing.JButton btn_cancelar
    - javax.swing.JButton btn_credito
    - javax.swing.JButton btn_debito
    - javax.swing.JCheckBox cb_b1
    - javax.swing.JCheckBox cb_b2
    - javax.swing.JCheckBox cb_b3
    - javax.swing.JCheckBox cb_b4
    - javax.swing.JCheckBox cb_b5
    - javax.swing.JCheckBox cb_d1
    - javax.swing.JCheckBox cb_d2
    - javax.swing.JCheckBox cb_d3
    - javax.swing.JCheckBox cb_d4
    - javax.swing.JCheckBox cb_d6
    - javax.swing.JCheckBox cb_d7
    - javax.swing.JCheckBox cb_d8
    - javax.swing.JCheckBox cd_d5
    - javax.swing.JLabel l_ad
    - javax.swing.JLabel l_bebidas
    - javax.swing.JLabel l_doces
    - javax.swing.JLabel l_texto
    - javax.swing.JLabel l_value
    - javax.swing.JPanel p_ad
    - javax.swing.JPanel p_add
    - javax.swing.JPanel p_purchase
    - javax.swing.JPanel p_total
    - javax.swing.JPanel purchaseScreen
    + <<Create>> PurchaseScreen()
    - void initComponents()
    - void btn_creditoActionPerformed(java.awt.event.ActionEvent)
    - void btn_debitoActionPerformed(java.awt.event.ActionEvent)
    - void cb_b1ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_b2ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_b3ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_b4ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_b5ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_d1ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_d2ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_d3ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_d4ItemStateChanged(java.awt.event.ItemEvent)
    - void cd_d5ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_d6ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_d7ItemStateChanged(java.awt.event.ItemEvent)
    - void cb_d8ItemStateChanged(java.awt.event.ItemEvent)
    - void btn_cancelarActionPerformed(java.awt.event.ActionEvent)
    - void atualizaTotal(JCheckBox)
    }
    class com.utfpr.projetoanalisedesistemas.CardScreen {
    - javax.swing.JButton btn_cancelar
    - javax.swing.JButton btn_finCompra
    - javax.swing.JPanel cardScreen
    - javax.swing.JFormattedTextField f_cardNumber
    - javax.swing.JPasswordField f_cvv
    - javax.swing.JFormattedTextField f_data
    - javax.swing.JTextField f_person
    - javax.swing.JLabel l_cvv
    - javax.swing.JLabel l_name
    - javax.swing.JLabel l_number
    - javax.swing.JLabel l_title
    - javax.swing.JLabel l_validade
    - javax.swing.JPanel p_cvv
    - javax.swing.JPanel p_name
    - javax.swing.JPanel p_number
    - javax.swing.JPanel p_title
    - javax.swing.JPanel p_validade
    + <<Create>> CardScreen()
    - void initComponents()
    - void btn_finCompraActionPerformed(java.awt.event.ActionEvent)
    - void btn_cancelarActionPerformed(java.awt.event.ActionEvent)
    - void f_cardNumberActionPerformed(java.awt.event.ActionEvent)
    }
    class com.utfpr.projetoanalisedesistemas.MenuScreen {
    - javax.swing.JButton btn_menuback
    - javax.swing.JLabel l_cardapio
    - javax.swing.JPanel menuScreen
    - javax.swing.JPanel p_menu
    + <<Create>> MenuScreen()
    - void initComponents()
    - void btn_menubackActionPerformed(java.awt.event.ActionEvent)
    }
    class com.utfpr.projetoanalisedesistemas.Screen {
    - String name
    ~ <<Create>> Screen(String)
    + String getName()
    }
}

class com.utfpr.projetoanalisedesistemas.MainClass {
# {static} BancoDeDados bancoDeDados
- {static} javax.swing.JPanel panelPai
+ <<Create>> MainClass()
- void initComponents()
~ {static} void switchScreen(Screen,String)
+ {static} void main(String[])
}


class com.utfpr.projetoanalisedesistemas.Ticket {
- float basePrice
+ <<Create>> Ticket()
+ float getBasePrice()
}
class com.utfpr.projetoanalisedesistemas.Aluno {
- String RA
- String name
- String eMail
- String password
- Ticket ticket
+ void setTicket(Ticket)
+ Ticket getTicket()
+ void setRA(String)
+ String getRA()
+ void setName(String)
+ String getName()
+ void setEmail(String)
+ String getEmail()
+ void setPassword(String)
+ String getPassword()
}
class com.utfpr.projetoanalisedesistemas.BancoDeDados {
~ <<Create>> BancoDeDados()
+ boolean verificaDados(String,String)
+ float encontraItem(String)
~ void getCardapio()
}


javax.swing.JPanel <|-- com.utfpr.projetoanalisedesistemas.Screen
javax.swing.JFrame <|-- com.utfpr.projetoanalisedesistemas.MainClass

com.utfpr.projetoanalisedesistemas.Screen <|-- com.utfpr.projetoanalisedesistemas.PurchaseScreen
com.utfpr.projetoanalisedesistemas.Screen <|-up- com.utfpr.projetoanalisedesistemas.LoginScreen
com.utfpr.projetoanalisedesistemas.Screen <|-- com.utfpr.projetoanalisedesistemas.CardScreen
com.utfpr.projetoanalisedesistemas.Screen <|-- com.utfpr.projetoanalisedesistemas.MenuScreen
com.utfpr.projetoanalisedesistemas.Screen <|-right- com.utfpr.projetoanalisedesistemas.OptionScreen






@enduml